# github-desktop-next

./: .gitignore  .npmrc  .prettierrc.yml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.demo.html  index.html  official.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/git-credential-desktop/: Cargo.toml
apps/desktop/git-credential-desktop/src/: main.rs
apps/desktop/official/src/crash/: crash-app.tsx
apps/desktop/official/src/highlighter/: index.ts  require-shim.ts
apps/desktop/official/src/lib/: api.ts  app-state.ts  copilot-commit-message.ts  copilot-conflict-context.ts  copilot-conflict-resolution.ts  copilot-error.ts  custom-integration.ts  diff-parser.ts  feature-flag.ts  file-system.ts  format-date.ts  format-duration.ts  format-number.ts  format-relative.ts  fuzzy-find.ts  get-account-for-repository.ts  get-os.ts  is-git-on-path.ts  menu-update.ts  patch-formatter.ts  path.ts  read-emoji.ts  release-notes.ts  source-map-support.ts  squirrel-error-parser.ts  status-parser.ts  status.ts
apps/desktop/official/src/main-process/: app-window.ts  show-uncaught-exception.ts  squirrel-updater.ts
apps/desktop/official/src/models/: formatting-preferences.ts  menu-ids.ts  multi-commit-operation.ts  popup.ts  preferences.ts  repo-rules.ts  (+3 more)
apps/desktop/official/styles/: _ui.scss  _variables.scss  _vendor.scss
apps/desktop/src/: App.css  App.tsx  main.tsx  official.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: contextual_menu.rs  error.rs  events.rs  git2_ops.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: app.rs  cli.rs  dialog.rs  errors.rs  fs.rs  git.rs  menu.rs  misc.rs  mod.rs  network.rs  notifications.rs  registry.rs  secrets.rs  shell.rs  theme.rs  trampoline.rs  updates.rs  window.rs
apps/desktop/src/i18n/: index.ts  official.ts
apps/desktop/src/lib/: api.ts
apps/desktop/src/shims/: app-menu.ts  electron.ts  html-context-menu.ts  node-empty.ts  set-process-platform.ts  suppress-browser-context-menu.ts
docs/: SYNCING_UPSTREAM.md
locales/: en-US.json  ja-JP.json  zh-CN.json
locales/official/: en-US.json  zh-CN.json
scripts/: gen-app-icons.mjs  gen-icon.mjs  prebuild-helper.mjs
(+363 files in other folders)
