[package]
name = "github-desktop-next"
version = "0.1.0"
description = "GitHub Desktop Next (community fork)"
authors = ["sj817"]
edition = "2021"
rust-version = "1.77.2"

# The library is what the desktop binary and (future) mobile targets share.
[lib]
name = "github_desktop_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "time"] }
trash = "5"
base64 = "0.22"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Windows native toast with click activation (the plugin's desktop backend
# discards click events). Already in the tree transitively via notify-rust.
[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
# Registry reads for editor/shell detection (backs the registry-js shim).
winreg = "0.52"

# Single-instance forwarding so a second `github <path>` launch reaches the
# already-running app (desktop only).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
